<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="m">25 m</string>
    <string name="mm">100 m</string>
    <string name="k">1 km</string>
    <string name="add_fave">Add Favorite</string>
    <string name="app_name">MemoMap</string>
    <string name="app_version">Alpha v0.39 (23 Mar 2013)</string>
    <string name="address">Address</string>
    <string name="address_hint">Enter an address or destination</string>
    <string name="body">Body</string>
    <string name="body_hint">Compose your memo here.</string>
    <string name="cancel">Cancel</string>
    <string name="choose_fave">Favorite Places</string>
    <string name="continue_">Continue</string>
    <string name="create_here">Use My Location</string>
    <string name="create_memo">Create Memo</string>
    <string name="create_memo_msg">Where would you like to set this memo?</string>
    <string name="date_created">Date Created</string>
    <string name="default_">Default</string>
    <string name="default_rad">Default Radius</string>
    <string name="delete_memo">Delete Memo</string>
    <string name="edit">Edit</string>
    <string name="editmemo">Edit Memo</string>
    <string name="explain">The memo\'s radius determines that maximum distance you can be from a memo in order to be reminded. The smaller the radius, the closer you must approach the set location before the notification appears.</string>
    <string name="favorites">Favorites</string>
    <string name="hello_world">Hello world!</string>
    <string name="latitude">Latitude</string>
    <string name="less_than">&lt;</string>
    <string name="loading">Loading</string>
    <string name="location_name">Location Name</string>
    <string name="longitude">Longitude</string>
    <string name="main_menu">Main Menu</string>
    <string name="memo">Memo</string>
    <string name="memo_title">Memo Title</string>
    <string name="nullstring">null</string>
    <string name="my_memos">My Memos</string>
    <string name="menu_settings">Settings</string>
    <string name="no_memos">No memos yet!</string>
    <string name="nointernet">Internet connection is required.</string>
    <string name="ok">OK</string>
    <string name="open_memo">Open Memo</string>
    <string name="pintowhere">Pin to where?</string>
    <string name="publicmemo">Check here to upload this as a public memo.</string>
    <string name="radius">Radius</string>
    <string name="radius_a">25m</string>
    <string name="radius_b">50m</string>
    <string name="radius_c">100m</string>
    <string name="radius_info">What does this mean?</string>
    <string name="remember_loc">Check here to save this location.</string>
    <string name="reset_view">Reset View</string>
    <string name="save_memo">Save Memo</string>
    <string name="save_and_return">Save and Return</string>
    <string name="saved_memos">Saved Memos</string>
    <string name="search">Search</string>
    <string name="search_addr">Search by Address</string>
    <string name="service_name">MemoMap Location Service</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="tryagain">No results found. Try again?</string>
    <string name="view_faves">Favorite Places</string>
    <string name="view_memos">View Memos</string>
    <string name="view_reset">View reset.</string>
    <string name="waiting">Waiting for location fix&#8230;</string>

    <string name="crash_toast_text">MemoMap has crashed! But don\'t worry, the developer is on top of it.</string>
    <string name="crash_notif_ticker_text">Unexpected error! Please send a report.</string>
    <string name="crash_notif_title">MemoMap has crashed and burned.</string>
    <string name="crash_notif_text">Please click here to help us fix the issue.</string>

    <string name="crash_dialog_title">MemoMap has crashed</string>
    <string name="crash_dialog_text">An unexpected error has forced MemoMap to stop. 
        Please help us fix this by sending us a crash report. All you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">Any comments would be helpful:</string>
    <string name="crash_dialog_ok_toast">Thanks, pal.</string>
    
</resources>
