<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/memobodytext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="@string/memo"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/newmemo_body"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonbarB"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/memobodytext"
        android:layout_margin="6dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/body_hint"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLength="1000"
        android:minLines="2"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/buttonbarB"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:gravity="bottom" >
        
        <Button
            android:id="@+id/cancel_newmemo"
           	style="?android:attr/buttonBarButtonStyle"
           	android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
		    android:onClick="cancelMemo"
		    android:text="@string/cancel"
		    android:textAllCaps="true" />
	    <Button
	        android:id="@+id/continue_button"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
		    android:onClick="continueMemo"
	        android:text="@string/continue_"
	        android:textAllCaps="true" />
	</LinearLayout>
</RelativeLayout>