<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mm_rl_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".CreateMemoActivity" >

    <LinearLayout
        android:id="@+id/mm_ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/appversion"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

           	<EditText
           	    android:id="@+id/et_Title"
           	    android:layout_width="match_parent"
           	    android:layout_height="0dp"
           	    android:layout_margin="6dp"
           	    android:layout_weight="1"
           	    android:ems="10"
           	    android:imeOptions="actionDone"
           	    android:inputType="text|textEmailSubject"
           	    android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:text="@string/body"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_Body"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="6dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/body_hint"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLength="1000"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_Longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/longitude"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_LongValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/nullstring"
                    android:textColor="@color/Gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_Latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/latitude"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_LatValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/nullstring"
                    android:textColor="@color/Gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_Radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/radius"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_RadiusA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_a"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_RadiusB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radius_b"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rb_RadiusC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radius_c"
                    android:textColor="@android:color/white" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/appversion"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="8dp"
        android:height="48dp"
        android:orientation="horizontal"
        android:showDividers="middle" >
        
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="saveMemo"
            android:text="@string/save"
            android:textAllCaps="true" />
        

    </LinearLayout>

</RelativeLayout>