<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/openmemo_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    tools:context=".CreateMemoActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/memobodytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/memo"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_body"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="6dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/body_hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLength="1000"
            android:textColor="@android:color/white" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/location_name"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_locname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text|textEmailSubject"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_Longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:text="@string/longitude"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/view_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/nullstring"
                android:textColor="@color/Gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_Latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:text="@string/latitude"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/view_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/nullstring"
                android:textColor="@color/Gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/latitude_layout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/radius"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_rad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>